--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,24 @@
 body {
     font-family: Source Sans Pro, sans-serif;
     font-weight: 400;
+    color: #181835;
+}
+
+/* heading and logo*/
+ 
+h1, h2 {
+    font-family: Ubuntu, sans-serif;
+    letter-spacing: 4px;
+    color: aqua;
+}
+
+#logo {
+    margin: 50px 0 0 30px;
+    font-size: 280%;   
+}
+
+#motto {
+    font-family: Source Sans Pro, sans-serif;
+    font-style: italic;
+    margin: 40px 0 0 30px;
 }
