--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ h1, h2 {
 #logo {
     margin: 50px 0 0 30px;
     font-size: 280%;   
+    background-image: url(../images/bg-image.jpg); 
 }
 
 #motto {
@@ -37,7 +38,24 @@ h1, h2 {
     letter-spacing: 4px;
 }
 
+#menu, #logo {
+    line-height: 75px;
+}
+
 #menu li {
     list-style-type: none;
     margin-right: 30px;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid  blue;
+}
+
+.active {
+    border-bottom: white;
+}
+
+#menu a {
+    text-decoration: none;
+    color: blue;
 }
