--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,20 @@ h1, h2 {
     color: aqua;
 }
 
+#logo-bg {
+    background-image: url('../images/bg-image.jpg'); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    border-radius: 30px 30px 0 0;
+}
+
 #logo {
     margin: 50px 0 0 30px;
     font-size: 280%;   
-    background-image: url(../images/bg-image.jpg); 
 }
 
 #motto {
