--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ h1, h2 {
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: auto;
+    height: 20rem;
     overflow: hidden;
     border-radius: 30px 30px 0 0;
 }
@@ -40,7 +40,7 @@ h1, h2 {
     font-family: Source Sans Pro, sans-serif;
     font-style: italic;
     font-weight: 300;
-    margin: 40px 0 0 30px;
+    margin: 100px 0 0 30px;
 }
 
 #menu {
