--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 h1, h2 {
     font-family: Ubuntu, sans-serif;
     letter-spacing: 4px;
-    color: aqua;
+    color:white;
 }
 
 #logo-bg {
@@ -49,7 +49,7 @@ h1, h2 {
 }
 
 #menu, #logo {
-    line-height: 75px;
+    line-height: 90px;
 }
 
 #menu li {
