--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 body {
     font-family: Source Sans Pro, sans-serif;
     font-weight: 400;
+    font-size: x-large;
     color: #181835;
 }
 
@@ -17,6 +18,9 @@ body {
 h1, h2 {
     font-family: Ubuntu, sans-serif;
     letter-spacing: 4px;
+}
+
+h1 {
     color:white;
 }
 
@@ -28,24 +32,28 @@ h1, h2 {
     width: 100%;
     height: 20rem;
     overflow: hidden;
-    border-radius: 30px 30px 0 0;
 }
 
 #logo {
     margin: 50px 0 0 30px;
-    font-size: 280%;   
+    font-size: 300%;   
 }
 
 #motto {
+    color: white;
     font-family: Source Sans Pro, sans-serif;
     font-style: italic;
     font-weight: 300;
     margin: 100px 0 0 30px;
 }
 
+/* navigation links*/
+
 #menu {
-    font-size: 120%;
+    font-family: Ubuntu, sans-serif;
+    font-size: 100%;
     letter-spacing: 4px;
+     height: auto;
 }
 
 #menu, #logo {
@@ -53,8 +61,9 @@ h1, h2 {
 }
 
 #menu li {
+    float: left;
     list-style-type: none;
-    margin-right: 30px;
+    margin-left: 10%;
 }
 
 #menu a:hover {
@@ -62,10 +71,30 @@ h1, h2 {
 }
 
 .active {
-    border-bottom: white;
+    border-bottom:   black;
 }
 
 #menu a {
     text-decoration: none;
-    color: blue;
+    color: rgb(12, 12, 92);
 }
+
+#site-idea {
+    clear: both;
+}
+
+/* text of the section in two columns*/
+{
+    box-sizing: border-box;
+}
+
+.column {
+    float: left;
+    width: 50%;
+ }
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+ }
