--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,8 @@ h1 {
 
 #site-idea {
     clear: both;
+    margin-top: 150px;
+    margin-bottom: 50px;
 }
 
 /* text of the section in two columns*/
@@ -97,4 +99,8 @@ h1 {
     content: "";
     display: table;
     clear: both;
+ }
+
+ .text-center {
+    text-align: center;
  }
