--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,3 +120,25 @@ h2 {
     float: right;
     margin-right: 3em;
  }
+
+ /* section Albums of paintings*/
+  
+.album {
+    float: left;
+    width: 20%;
+    margin: 2%;
+    bottom: 0%;
+  }
+
+  .clear {
+    clear: both;
+  }
+
+  .album a {
+    text-align: center;
+  }
+  
+.cover {
+    border: 1 solid blueviolet;
+    padding: 5px;
+  }
