--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,10 +124,10 @@ h2 {
  /* section Albums of paintings*/
   
 .album {
-    float: left;
-    width: 20%;
+    width: 29%;
     margin: 2%;
     bottom: 0%;
+    display: inline-block;
   }
 
   .clear {
@@ -138,6 +138,10 @@ h2 {
     text-align: center;
   }
   
+  img {
+    width: 100%;
+  }
+
 .cover {
     border: 1 solid blueviolet;
     padding: 5px;
