Delete indents in text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,10 @@ h2 {
     width: 40%;
     padding: 20px;
     margin: auto;
+    text-align: justify;
  }
+ 
+
 
 .row:after {
     content: "";
