--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,13 @@ h2 {
     width: 100%;
   }
 
+  hr {
+    width: 80%;
+    height:2px;
+    border-width:0;
+    color:gray;
+  }
+
   /* footer*/
   .contacts {
     height: 100px;
