--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,13 @@ h2 {
     display: inline-block;
   }
 
+  .album2 {
+    width: 20%;
+    margin: 1%;
+    padding-top: 0;
+    display: inline-block;
+  }
+
   .clear {
     clear: both;
   }
