--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,10 +83,11 @@ h2 {
     color: inherit;
 }
 
-#site-idea {
+.site-idea {
     clear: both;
     margin-top: 150px;
     margin-bottom: 50px;
+    box-sizing: border-box;
 }
 
 .text-center {
@@ -94,9 +95,6 @@ h2 {
  }
 
 /* text of the section in two columns*/
-#site-idea {
-    box-sizing: border-box;
-}
 
 .column {
     float: left;
@@ -129,6 +127,7 @@ h2 {
     margin: 2%;
     padding-top: 0;
     display: inline-block;
+    vertical-align: top;
   }
 
   .album2 {
@@ -151,15 +150,20 @@ h2 {
   }
 
   hr {
-    width: 80%;
-    height:2px;
-    border-width:0;
-    color:gray;
+    border-style: inset;
+    border-width: 1px;
   }
 
   /* footer*/
+
   .contacts {
-    height: 100px;
+    height: 130px;
+    padding: 30px;
     background-color: #2e4608;
+    color: whitesmoke;
+    margin:  30px;
+  }
+
+  footer a {
     color: whitesmoke;
   }
