--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,13 @@ h2 {
   img {
     width: 80%;   
   }
+  
+  .container {
+    margin: 0 auto;
+    max-width: 1200px;
+    overflow: visible;
+  }
+
   }
   /* footer*/
 
