--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;1,400&family=Ubuntu&display=swap');
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     border: none;
+    
 }
 
 body {
@@ -131,18 +133,6 @@ h2 {
     vertical-align: top;
   }
 
-  .album2 {
-    width: 22%;
-    margin: 1%;
-    padding-top: 0;
-    display: inline-block;
-  }
-
-  .album2 a:hover {
-    color: #f05f5f;
-    text-decoration: none;
-  }
-
   .clear {
     clear: both;
   }
@@ -151,7 +141,7 @@ h2 {
     text-align: center;
   }
 
-  
+
  .album a:hover {
     color: #4548e0;
     text-decoration: none;
@@ -166,6 +156,17 @@ h2 {
     border-width: 1px;
   }
 
+  .form {
+    border: 1px solid #4548e0;
+    border-radius: 10px;
+    background-color: rgb(188, 243, 142);
+    width: 60%;
+    margin: auto;
+    padding: 10px;
+  }
+
+
+  
   /* Media queries */
   /* For larger to medium screen size from 1200px and less */
 
@@ -210,6 +211,24 @@ h2 {
   }
 
   }
+
+  /*   For mobile phone screen size from 600px and less */
+
+  flex600 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 33%;
+  }
+
+form input {
+    padding: 10px 70px 10px 0;
+    font-size: 14px;
+    border: none;
+    border-radius: 6px;
+    padding-left: 6px;
+}
+
   /* footer*/
 
   .contacts {
