--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,6 @@ h2 {
 
  /* section Albums of paintings */
 
-  @media (min-width: 500px) {
   .container {
     display: flex;
     border: 1px solid silver;
@@ -133,13 +132,12 @@ h2 {
     align-items: flex-start;
     justify-content: center;
   }
-  }
-
+  
   .album {
     flex-basis: 32%;
     padding: 20px;
     margin-top: 0;
-
+    flex-wrap: wrap;
   }
 
   .clear {
@@ -164,22 +162,18 @@ h2 {
     border-style: inset;
     border-width: 1px;
   }
-
-  .form {
-    border: 1px solid #4548e0;
-    border-radius: 10px;
-    background-color: rgb(188, 243, 142);
-    width: 60%;
-    margin: auto;
-    padding: 10px;
-  }
-
-
   
   /* Media queries */
-  /* For larger to medium screen size from 1200px and less */
 
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 1300px){
+    .video-wrapper {
+      background-color: #438f56;
+      flex-direction: column;
+    }
+  }
+  /* For larger to medium screen size from 1080px to 500 px */
+
+  @media screen and (max-width: 1080px){
 
     body {
         font-size: large;
@@ -212,23 +206,62 @@ h2 {
   img {
     width: 80%;   
   }
-  
-  .container {
-    margin: 0 auto;
-    max-width: 1200px;
-    overflow: visible;
-  }
 
-  }
-
-  /*   For mobile phone screen size from 600px and less */
-
-  flex600 {
+  .video-wrapper {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 33%;
+    flex-direction: column;
   }
+  .video {
+    flex-shrink: 1;
+  }
+  }
+
+  /*   For mobile phone screen size from 500px and less */
+  
+  @media only screen and (max-width: 500px){
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+    }
+   
+  .container2 {
+    display: flex;
+  }  
+
+  .video {
+    display: flex;
+    flex-wrap: wrap;
+  }
+} 
+/* Responsive video from youtube*/
+
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.form {
+  border: 1px solid #438f56;
+  border-radius: 10px;
+  background-color: rgb(213, 240, 191);
+  width: 60%;
+  margin: auto;
+  padding: 10px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+}
 
 form input {
     padding: 10px 70px 10px 0;
