--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,7 +212,7 @@ h2 {
     }
 } 
 
-/* Responsive video from youtube*/
+/* Responsive video - the code from outer source:  https://youtu.be/9YffrCViTVk */
 
 .iframe-container{
   position: relative;
@@ -227,9 +227,9 @@ h2 {
   width: 100%;
   height: 100%;
 }
+/* The end of the code from outer source  */
 
-
-
+/* The code with some changes was taken from outer source - https://www.freecodecamp.org/news/css-flexbox-and-grid-tutorial/ */
 .form {
   border: 1px solid #438f56;
   border-radius: 10px;
@@ -249,10 +249,6 @@ form input {
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
 }
 
-textarea {
-  max-width: 95%;
-} 
-
 .button {
   border-radius: 6px;
   padding: 12px 20px;
@@ -264,6 +260,12 @@ textarea {
   cursor: pointer;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
 }
+/* The end of the code from outer source */
+
+
+textarea {
+  max-width: 95%;
+} 
 
   /* footer*/
 
