--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,11 @@ h2 {
       align-items: flex-start;
       justify-content: center;
     }
+
+    
+#logo {
+  margin: 30px 0 0 20px;
+  font-size: 200%;  
 } 
 
 /* Responsive video - the code from outer source:  https://youtu.be/9YffrCViTVk */
