--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,13 +211,12 @@ h2 {
       align-items: flex-start;
       justify-content: center;
     }
-
     
 #logo {
   margin: 30px 0 0 20px;
   font-size: 200%;  
 } 
-
+  }
 /* Responsive video - the code from outer source:  https://youtu.be/9YffrCViTVk */
 
 .iframe-container{
@@ -253,6 +252,7 @@ form input {
     border-radius: 6px;
     padding-left: 6px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+    max-width: 95%;
 }
 
 .button {
