--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ h2 {
   flex-shrink: 1;
 }
 
-.flex-container>div {
+.flex-container div {
   flex-direction: row;
   margin: 10px;
   padding: 1%;
@@ -131,6 +131,10 @@ h2 {
 @media (max-width: 800px) {
   .flex-container-text {
     flex-direction: column;
+  }
+
+  .menu div {
+    margin-left: 3%;
   }
 }
 
@@ -214,10 +218,8 @@ hr {
     line-height: 60px;
   }
 
-  .menu li {
-    float: left;
-    list-style-type: none;
-    margin-left: 10px;
+  .menu div {
+    margin-left: 3%;
   }
 
   img {
@@ -239,6 +241,14 @@ hr {
     margin: 30px 0 0 20px;
     font-size: 200%;
   }
+
+  .menu div {
+    margin-left: 2%;
+  }
+
+  form input {
+    padding: 10px 40px 10px 0;
+}
 }
 
 /* Responsive video - the code from outer source:  https://youtu.be/9YffrCViTVk */
