--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ h2 {
 .flex-container-text {
   display: flex;
   flex-direction: row;
-  font-size: 30px;
+  font-size: x-large;
   text-align: center;
   justify-content: space-around;
 }
@@ -159,6 +159,10 @@ h2 {
 
 .album a {
   text-align: center;
+}
+
+.album p {
+  font-size: medium;
 }
 
 
@@ -335,11 +339,12 @@ textarea {
 /* footer*/
 
 .contacts {
-  height: 130px;
-  padding: 30px;
+  height: 140px;
+  padding: 10px;
+  margin: 10px;
   background-color: #093f02;
   color: whitesmoke;
-  margin: 30px;
+  
 }
 
 .text-center a:hover {
