Change flex-direction to row in the mobile phones screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@ hr {
 
   .flex-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     justify-content: center;
   }
@@ -274,6 +274,7 @@ hr {
     .menu div {
       margin-left: 2%;
       line-height: 5px;
+      letter-spacing: 0;
     }
 
     form input {
