--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,7 @@ hr {
 @media (max-width: 800px) {
   .flex-container-text {
     flex-direction: column;
+    font-size: inherit;
   }
 
   .menu div {
@@ -257,104 +258,109 @@ hr {
     font-size: 100%;
   }
 
+  .flex-container-text {
+    font-size: inherit;
+  }
+
   .container {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
   img {
     width: 100%;
   }
 
-    .logo {
-      margin: 30px 0 0 20px;
-      font-size: 200%;
-    }
-
-    .menu div {
-      margin-left: 2%;
-      line-height: 5px;
-      letter-spacing: 0;
-    }
-
-    form input {
-      padding: 10px 40px 10px 0;
-    }
+  .logo {
+    margin: 30px 0 0 20px;
+    font-size: 200%;
   }
 
-  /* Responsive video - the code from outer source:  https://youtu.be/9YffrCViTVk */
-
-  .iframe-container {
-    position: relative;
-    width: 100%;
-    padding-bottom: 56.25%;
-    height: 0;
-  }
-
-  .iframe-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  /* The end of the code from outer source  */
-
-  /* The code with some changes was taken from outer source - https://www.freecodecamp.org/news/css-flexbox-and-grid-tutorial/ */
-  .form {
-    border: 1px solid #438f56;
-    border-radius: 10px;
-    background-color: rgb(213, 240, 191);
-    width: 60%;
-    margin: auto;
-    padding: 10px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  .menu div {
+    margin-left: 2%;
+    line-height: 5px;
+    letter-spacing: 0;
   }
 
   form input {
-    padding: 10px 10px 10px 0;
-    font-size: 14px;
-    border: none;
-    border-radius: 6px;
-    padding-left: 6px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+    padding: 10px 40px 10px 0;
   }
+}
 
-  .button {
-    border-radius: 6px;
-    padding: 12px 20px;
-    background: #064e1c;
-    border: none;
-    margin-left: 10px;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-  }
+/* Responsive video - the code from outer source:  https://youtu.be/9YffrCViTVk */
 
-  /* The end of the code from outer source */
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
 
-  textarea {
-    max-width: 95%;
-  }
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
-  /* footer*/
+/* The end of the code from outer source  */
 
-  .contacts {
-    height: 140px;
-    padding: 10px;
-    margin: 10px;
-    background-color: #093f02;
-    color: whitesmoke;
+/* The code with some changes was taken from outer source - https://www.freecodecamp.org/news/css-flexbox-and-grid-tutorial/ */
+.form {
+  border: 1px solid #438f56;
+  border-radius: 10px;
+  background-color: rgb(213, 240, 191);
+  width: 60%;
+  margin: auto;
+  padding: 10px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+}
 
-  }
+form input {
+  padding: 10px 10px 10px 0;
+  font-size: 14px;
+  border: none;
+  border-radius: 6px;
+  padding-left: 6px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+}
 
-  .text-center a:hover {
-    color: #4548e0;
-    text-decoration: none;
-  }
+.button {
+  border-radius: 6px;
+  padding: 12px 20px;
+  background: #064e1c;
+  border: none;
+  margin-left: 10px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+}
 
-  footer a {
-    color: whitesmoke;
-  }
+/* The end of the code from outer source */
+
+textarea {
+  max-width: 95%;
+}
+
+/* footer*/
+
+.contacts {
+  height: 140px;
+  padding: 10px;
+  margin: 10px;
+  background-color: #093f02;
+  color: whitesmoke;
+
+}
+
+.text-center a:hover {
+  color: #4548e0;
+  text-decoration: none;
+}
+
+footer a {
+  color: whitesmoke;
+}
